[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tvp-correlation"
version = "0.1.0"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "tqdm>=4.64",
]

[tool.setuptools.packages.find]
where = ["src"]          # ищем пакеты внутри папки src
include = ["*"]          # включаем всё, что найдём

[tool.setuptools.package-dir]
"" = "src"               # корень пакетов — папка src
